base/ArgoCD/02-ingress.yaml
# TODO : This is a working example, but might not fit your environment
# Please override this file in your own overlays
# TODO : This is exposing longhorn's dashboard directly to the internet, 
# which is a bad idea.  Secure this, or keep it internal
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-tls-passthrough
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`argocd.example.com`)
      services:
        - name: argocd-server
          port: https
  tls:
    passthrough: true
